--- a/templates/core/base_login.html
+++ b/templates/core/base_login.html
@@ -8,21 +8,19 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <script src="https://kit.fontawesome.com/2f543ddc08.js" crossorigin="anonymous"></script>
-
+ 
     {% if title %}
-    <title>Django Custom Users - {{ title }}</title>
+    <title>AGAH Solutions - {{ title }}</title>
     {% else %}
-    <title>Django Custom Users</title>
+    <title>AGAH Solutions</title>
     {% endif %}
-    
   </head>
-    <body class="d-flex flex-column h-100" style="background-color: rgba(62, 2, 162, 0.8)">
+
+     <body class="bg-light d-flex flex-column h-100">
       <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container-fluid">
-          <a href="{% url 'index' %}" class="navbar-brand light">
-            AGAH Solutions
-          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,15 +32,9 @@
               <li class="nav-item me-3">
                 <a class="nav-link active" href="{% url 'index' %}#z_section">Trabalhos</a>
               </li>
-              {% if request.user.is_authenticated %}
-                  <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
-                  </li>
-              {% else %}
-                  <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'login' %}">Login</a>
-                  </li>
-              {% endif %}
+                <li class="nav-item">
+                <a class="nav-link active" href="{% url 'login' %}">Login</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -79,225 +71,17 @@
               <i class='far fa-envelope fs-1 link-light'></i>
             </a>
           </div>
+          <div class="col-2">
+            <a href="https://wa.link/suvjhe" target='_blank'>
+                <i class="fab fa-whatsapp fs-1 link-light"></i>
+            </a>
+          </div>
         </div>
         <div class="row mt-3 text-light">
           <p>AGAH Solutions &copy 2021 | Proudly built from <a href="https://github.com/h-zanetti/DjangoCustomUsers" class="my-link-light" target="_blank">Django Custom Users</a></p>
         </div>
         </div>
       </footer>
-
-      
-<style>
-    .hero-section {
-        background-image: linear-gradient(rgba(62, 2, 162, 0.8), rgba(62, 2, 162, 0.3)), url('../images/working-bg.jpg');
-        height: 92vh;
-        background-size: cover;
-        padding-top: 25vh;
-        padding-bottom: 30vh;
-    }
-
-    .z-section {
-        {% comment %} background-image: linear-gradient(rgba(62, 2, 162, 0.8), rgba(62, 2, 162, 0.3)), url('../images/working-bg.jpg'); {% endcomment %}
-        height: 80vh;
-        background-size: cover;
-        padding-top: 10vh;
-        padding-bottom: 30vh;
-    }
-
-    .time-out-section {
-        {% comment %} background-image: linear-gradient(rgba(62, 2, 162, 0.8), rgba(62, 2, 162, 0.3)), url('../images/working-bg.jpg'); {% endcomment %}
-        height: 80vh;
-        background-size: cover;
-        padding-top: 10vh;
-        padding-bottom: 30vh;
-        color: rgb(62, 2, 162);
-    }
-
-    .about-section {
-        background-color: rgb(62, 2, 162);
-        height: 100vh;
-        background-size: cover;
-        padding-bottom: 30vh;
-    }
-
-    .purple {
-        color: rgb(62, 2, 162);
-    }
-    
-    .bg-purple {
-        background-color: rgb(62, 2, 162);
-    }
-    
-    
-    .my-link {
-        color: rgb(235, 227, 61);
-        text-decoration: None;
-        border-bottom: 1px solid;
-        padding-botton: 1em;
-    }
-
-        .my-link:hover {
-            color: rgb(158, 151, 9);
-        }
-
-    .my-link-dark {
-        color: rgb(62, 2, 162);
-        text-decoration: None;
-        border-bottom: 1px solid;
-        padding-botton: 1em;
-    }
-
-        .my-link-dark:hover {
-            color: #31017e;
-        }
-
-    .my-link-light {
-        color: #F9FAFB;
-        text-decoration: None;
-        border-bottom: 1px solid;
-        padding-botton: 1em;
-    }
-
-        .my-link-light:hover {
-            color: #cccccc;
-        }
-
-    .ta-justify {
-        text-align: justify;
-    }
-
-    .my-btn-active {
-        text-decoration: None;
-        background-color: #e6e6e6;
-        border: 1px solid #e6e6e6;
-        border-radius: 30px;
-        padding: 0.25em 0.75em;
-        text-align: center;
-        color: #212529;
-    }
-
-        .my-btn-active:hover {
-            text-decoration: None;
-            background-color: white;
-            border: 1px solid white;
-            border-radius: 30px;
-            padding: 0.25em 0.75em;
-            text-align: center;
-            color: #212529;
-        }
-
-    .my-btn-inactive {
-        text-decoration: None;
-        border: 1px solid #cccccc;
-        border-radius: 30px;
-        padding: 0.25em 0.75em;
-        text-align: center;
-        color: #cccccc;
-    }
-
-        .my-btn-inactive:hover {
-            text-decoration: None;
-            border: 1px solid white;
-            border-radius: 30px;
-            padding: 0.25em 0.75em;
-            text-align: center;
-            color: white;
-        }
-
-    .my-btn-outline-dark {
-        text-decoration: None;
-        border: 1px solid rgb(62, 2, 162);
-        border-radius: 30px;
-        padding: 0.25em 0.75em;
-        text-align: center;
-        color: rgb(62, 2, 162);
-    }
-
-        .my-btn-outline-dark:hover {
-            text-decoration: None;
-            border: 1px solid rgb(62, 2, 162);
-            border-radius: 30px;
-            background-color: rgb(62, 2, 162);
-            padding: 0.25em 0.75em;
-            text-align: center;
-            color: white;
-        }
-
-    .my-btn-dark {
-        text-decoration: None;
-        border: 1px solid rgb(62, 2, 162);
-        background-color: rgb(62, 2, 162);
-        border-radius: 30px;
-        padding: 0.25em 0.75em;
-        text-align: center;
-        color: #F8F9FA;
-    }
-
-        .my-btn-dark:hover {
-            text-decoration: None;
-            border: 1px solid #31017e;
-            border-radius: 30px;
-            background-color: #31017e;
-            padding: 0.25em 0.75em;
-            text-align: center;
-            color: white;
-        }
-
-    .my-btn-outline-dark {
-        text-decoration: None;
-        border: 1px solid rgb(62, 2, 162);
-        border-radius: 30px;
-        padding: 0.25em 0.75em;
-        text-align: center;
-        color: rgb(62, 2, 162);
-    }
-
-        .my-btn-outline-dark:hover {
-            text-decoration: None;
-            border: 1px solid rgb(62, 2, 162);
-            border-radius: 30px;
-            background-color: rgb(62, 2, 162);
-            padding: 0.25em 0.75em;
-            text-align: center;
-            color: white;
-        }
-
-    .my-btn-lg-outline-light {
-        text-decoration: None;
-        border: 1px solid rgb(235, 227, 61);
-        border-radius: 30px;
-        padding: 0.5em 1em;
-        text-align: center;
-        color: rgb(235, 227, 61);
-        font-size: 1.5em;
-    }
-
-        .my-btn-lg-outline-light:hover {
-            text-decoration: None;
-            border: 1px solid rgb(235, 227, 61);
-            border-radius: 30px;
-            background-color: rgb(235, 227, 61);
-            padding: 0.5em 1em;
-            text-align: center;
-            color: white;
-            font-size: 1.5em;
-        }
-
-  .form-control {
-    margin: 5px 0;
-  }
-
-  .form-control:focus {
-    border-color: #31017e;
-    box-shadow: 0 0 0 4px rgba(62, 2, 162, 0.5);
-  }
-
-  .my-divider {
-    height: 2px;
-    background-color: rgba(62, 2, 162, 0.5);
-  }
-
-</style>
 
 
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
