--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -3,11 +3,14 @@
 {% block content %}
 
 <section class="hero-section">
-    <div class="container w-75 text-white text-center">
+    <div class="container w-75 text-white">
         <div class='col'>
-            <h1 class="display-3 fw-normal">AGAH Solutions</h1>
-            <p class="fs-3 fw-light">Digitalização de empresas e automação de processos</p>
-            <p class="fs-5 fw-light">Ganhe mais tempo de produtividade para focar no que realmente importa</p>
+            <h1 class="display-3 fw-normal text-shadow-md">AGAH Solutions</h1>
+            <p class="fs-3 fw-light text-shadow-md">Digitalização de empresas e automação de processos</p>
+            <p class="fs-5 fw-light text-shadow-md">Ganhe mais tempo de produtividade para focar no que realmente importa</p>
+            <a href="{% url 'index' %}#about" class="btn my-btn-dark px-4 py-2 mt-4 me-2 fw-normal">quem somos</a>
+            <a href="{% url 'index' %}#z_section" class="btn my-btn-dark px-4 py-2 mt-4 me-2 fw-normal">Trabalhos</a>
+            <a href="mailto:contato@agahsolutions.com" class="btn my-btn-dark px-4 py-2 mt-4 fw-normal">Contato</a>
         </div>
     </div>
 </section>
@@ -16,50 +19,36 @@
     <div class="container w-75 text-white fs-5 fw-light">
         <div class='row py-5 gx-5 d-flex justify-content-between'>
             <div class='col-6'>
-                <h1 class="display-6">Nosso Trabalho</h1>
-                <p>Nossa missão é maximizar a produtividade do seu negócio com a ajuda da tecnologia. Conosco, empresas se desenvolvem digitalmente de maneira fácil e ágil. Muitos funcionários perdem seu caro e precioso tempo de trabalho realizando tarefas automatizáveis, rendendo menos para a empresa do que se estivessem produzindo, vendendo ou pensando em novas estratégias.</p>
-                <p>Entre em contato por <a class="my-link" href="mailto:contato@agahsolutions.com">Email</a> para darmos início à digitalização do seu negócio e maximizar seu rendimento.</p>
+                <h1 class="display-6"><u>Nosso Trabalho</u></h1>
+                <p class='mt-4'>Nossa missão é maximizar a produtividade do seu negócio com a ajuda da tecnologia. Nossos sistemas possibilitam que empresas se desenvolvam digitalmente de maneira fácil e ágil.</p>
+                <p class='mt-4'>Deixe de perder horas de trabalho realizando tarefas automatizáveis e maximize o seu rendimento.</p>
+                <p class='mt-4'>Entre em contato por <a class="my-link" href="mailto:contato@agahsolutions.com">Email</a> para darmos início à digitalização do seu negócio.</p>
             </div>
             <div class='col-6'>
                 <div class='row gy-3'>
                     <div class='col-12'>
-                        <h1 class="display-6">Asistência Técnica</h1>
-                        <p>Nossa equipe de suporte está disponível todos os dias, incluindo finais de semana e feriados, com horário de funcionamento das 10:00 às 23:59.</p>
+                        <h1 class="display-6"><u>Asistência Técnica</u></h1>
+                        <p class='mt-4'>Nossa equipe de suporte está disponível todos os dias, incluindo finais de semana e feriados, com horário de funcionamento das 10:00 às 23:59.</p>
                     </div>
                     <div class='col-12'>
-                        <h1 class="display-6">Sistemas Exclusivos</h1>
-                        <p>Além de sistemas para gestão, temos serviços de assessoria digital para desenvolver o melhor sistema ou aplicativo <strong>específico para o seu negócio</strong>.</p>
-                        <p>Entre em <a class="my-link" href="mailto:contato@agahsolutions.com">contato</a> conosco para solicitar um orçamento.</p>
+                        <h1 class="display-6"><u>Sistemas Exclusivos</u></h1>
+                        <p class='mt-4'>Além do sistema padrão de gestão, temos serviços de assessoria digital para desenvolver o melhor sistema ou aplicativo <strong>específico para a sua empresa</strong>. Solicite um orçamento por <a class="my-link" href="mailto:contato@agahsolutions.com">Email</a>.</p>
                     </div>
                 </div>
             </div>
         </div>
-        {% comment %} <div class='row'>
-            <p class='align-self-start'>Nossos clientes:</p>
-            <div class='col align-self-center'>
-                <a href="#">
-                    <img src="{% static 'core/images/time_out_refuges_logo.png' %}" alt="...">
-                    <p>Time Out Refuges</p>
-                </a>
-            </div>
-            <div class='col align-self-center'>
-                <a href="#">
-                    <img src="{% static 'core/images/zatelier_logo.webp' %}" alt="...">
-                </a>
-            </div>
-        </div> {% endcomment %}
     </div>
 </section>
 
-<section class="z-section bg-dark text-light" id='z_section'>
+<section class="z-section text-light" id='z_section'>
     <div class="container">
         <div class="row">
             <div class="col-5">
                 <div class="row">
                     <h1 class="display-6">Z Atelier</h1>
                 </div>
-                <div class="row mt-3 mb-2">
-                    <p>    Officia ea commodo magna nostrud dolor aliqua nisi sit occaecat mollit eiusmod est nisi culpa. Non labore dolore cillum occaecat occaecat. Nulla nisi sunt proident id do est quis voluptate ut. Amet ad id pariatur sit excepteur. Deserunt nulla consectetur enim enim cillum laboris nisi reprehenderit. Exercitation voluptate amet ad tempor sit deserunt cupidatat sunt non occaecat exercitation nulla do.</p>
+                <div class="row my-2 fw-light">
+                    <p>Essa plataforma foi criada especialmente para ourives profissionais. Nossa equipe desenvolveu um projeto que possibilita o controle de estoque dos produtos e matérias primas, cálculo automático do custo de produção das jóias e seu preço de venda, atualização do estoque com o impacto de produção de novas coleções, administração do fluxo de caixa e muito mais.</p>
                 </div>
                 <div class="row">
                     <ul class="list-inline">
@@ -67,8 +56,8 @@
                         <li class="list-inline-item"><a class="btn my-btn-inactive">Vendas</a></li>
                         <li class="list-inline-item"><a class="btn my-btn-inactive">Impacto de Produção</a></li>
                         <li class="list-inline-item"><a class="btn my-btn-inactive">Fluxo de Caixa</a></li>
-                        <li class="list-inline-item mt-3"><a class="btn my-btn-inactive">Conexão com Site</a></li>
-                        <li class="list-inline-item"><a class="btn my-btn-active">Visitar Site</a></li>
+                        <li class="list-inline-item mt-3"><a class="btn my-btn-inactive">Conexão com Site de Vendas</a></li>
+                        <li class="list-inline-item mt-3"><a class="btn my-btn-active">Visitar Site</a></li>
                     </ul>
                 </div>
             </div>
@@ -76,15 +65,15 @@
     </div>
 </section>
 
-<section class="time-out-section bg-light">
+<section class="time-out-section">
     <div class="container">
         <div class="row">
             <div class="col-5">
                 <div class="row">
                     <h1 class="display-6">Time Out Refuges</h1>
                 </div>
-                <div class="row mt-3">
-                    <p>    Enim commodo mollit pariatur consequat fugiat et velit adipisicing et magna voluptate. Eiusmod irure nostrud irure pariatur enim aliqua officia sint anim. Esse fugiat Lorem adipisicing irure in deserunt voluptate duis. Nostrud non qui deserunt eiusmod voluptate excepteur qui labore mollit sit sit. Eiusmod aliquip nostrud incididunt labore nisi sint nisi proident cillum dolor aute duis. Mollit elit ipsum excepteur mollit fugiat aliqua enim consequat est eiusmod enim laboris.</p>
+                <div class="row my-2">
+                    <p>Website criado para uma empresa de aluguel de temporada. Nossa equipe desenvolveu todo o design do site, funcionalidades de adição de imóveis, agendamento de visitas, review de estadias e análise de rendimento dos proprietários, garantindo um experiência de usuário (UX) impecável. Além de um site completo, também tomamos conta do marketing digital dos imóveis, maximizando a renda da empresa e de seus clientes.</p>
                 </div>
                 <div class="row">
                     <ul class="list-inline mb-2">
@@ -97,6 +86,7 @@
                 </div>
             </div>
         </div>
-    </div></section>
+    </div>
+</section>
 
 {% endblock content %}
