--- a/templates/core/base_login.html
+++ b/templates/core/base_login.html
@@ -18,8 +18,8 @@
     {% endif %}
   </head>
 
-     <body class="bg-light d-flex flex-column h-100">
-      <nav class="navbar navbar-dark navbar-expand-lg">
+     <body class="bg-purple d-flex flex-column h-100">
+      <nav class="navbar bg-purple navbar-dark navbar-expand-lg">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -60,9 +60,9 @@
         {% block content %}{% endblock %}
       </main>
 
-      <footer class="footer mt-auto ms-auto me-auto py-3 pt-4">
-      <div class="container text-light">
-        <div class="row text-center">
+      <footer class="footer mt-auto ms-auto me-auto py-3 pt-4 bg-purple">
+      <div class="container">
+        <div class="row text-center text-light">
           <h1 class="display-6">Mantenha Contato</div>
         </div>
         <div class="row d-flex justify-content-center py-3">
@@ -77,12 +77,11 @@
             </a>
           </div>
         </div>
-        <div class="row mt-3 text-light">
-          <p>AGAH Solutions &copy 2021 | Proudly built from <a href="https://github.com/h-zanetti/DjangoCustomUsers" class="my-link-light" target="_blank">Django Custom Users</a></p>
+        <div class="row mt-3 purple text-light">
+          <p>AGAH Solutions &copy 2021 | Proudly built from <a href="https://github.com/h-zanetti/DjangoCustomUsers" class="link-light" target="_blank">Django Custom Users</a></p>
         </div>
         </div>
       </footer>
-
 
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
